--- a/ProjectAID/test-output/old/Default suite/classes.html
+++ b/ProjectAID/test-output/old/Default suite/classes.html
@@ -4,14 +4,14 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>ProjectGID.ProjectAID.LoginTest</td>
+<td>ProjectGID.ProjectAID.BCMD</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>f</td>
+<td>bcmd</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
