--- a/srvanthi_testng/test-output/old/Default suite/classes.html
+++ b/srvanthi_testng/test-output/old/Default suite/classes.html
@@ -4,16 +4,15 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>srvanthi_testng.WebDriverCommands</td>
+<td>pageObjectModel.Handlecalender</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>TC1</td>
-<td>BrowserCommands </td>
-</tr>
+<td>handlecalender</td>
+<td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
