--- a/srvanthi_testng/test-output/old/Default suite/methods-alphabetical.html
+++ b/srvanthi_testng/test-output/old/Default suite/methods-alphabetical.html
@@ -1,6 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="be92ad">  <td>21/01/08 01:09:21</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="WebDriverCommands.TC1()[pri:-1, instance:srvanthi_testng.WebDriverCommands@56235b8e]">TC1</td> 
-  <td>main@1408652377</td>   <td></td> </tr>
+<tr bgcolor="94d491">  <td>21/01/29 21:22:26</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Handlecalender.handlecalender()[pri:0, instance:pageObjectModel.Handlecalender@5c5a1b69]">handlecalender</td> 
+  <td>main@391618063</td>   <td></td> </tr>
+<tr bgcolor="94d491">  <td>21/01/29 21:22:09</td>   <td>-16986</td> <td>&nbsp;</td><td title="&gt;&gt;Handlecalender.login()[pri:0, instance:pageObjectModel.Handlecalender@5c5a1b69]">&gt;&gt;login</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@391618063</td>   <td></td> </tr>
 </table>
