--- a/srvanthi_testng/test-output/old/Suite/groups.html
+++ b/srvanthi_testng/test-output/old/Suite/groups.html
@@ -1,3 +1,4 @@
 <h2>Groups used for this test run</h2><table border="1">
-<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>BrowserCommands</td><td>WebDriverCommands.TC1(java.lang.String, java.lang.String)[pri:1, instance:srvanthi_testng.WebDriverCommands@4e9ba398]<br/></td></tr>
+<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>BrowserCommands</td><td>WebDriverCommands.TC1()[pri:-1, instance:srvanthi_testng.WebDriverCommands@6536e911]<br/></td></tr>
+<tr><td>Testarray</td><td>Testarray.TC1()[pri:1, instance:srvanthi_testng.Testarray@520a3426]<br/></td></tr>
 </table>
