--- a/srvanthi_testng/test-output/old/Suite/methods-alphabetical.html
+++ b/srvanthi_testng/test-output/old/Suite/methods-alphabetical.html
@@ -1,6 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="aedc67">  <td>20/12/23 22:43:30</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="WebDriverCommands.TC1(java.lang.String, java.lang.String)[pri:1, instance:srvanthi_testng.WebDriverCommands@4e9ba398]">TC1</td> 
-  <td>main@366004251</td>   <td></td> </tr>
+<tr bgcolor="be92ad">  <td>21/01/11 02:30:23</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="WebDriverCommands.TC1()[pri:-1, instance:srvanthi_testng.WebDriverCommands@6536e911]">TC1</td> 
+  <td>main@459857341</td>   <td></td> </tr>
+<tr bgcolor="aedc67">  <td>21/01/11 02:31:21</td>   <td>57557</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Testarray.TC1()[pri:1, instance:srvanthi_testng.Testarray@520a3426]">TC1</td> 
+  <td>main@459857341</td>   <td></td> </tr>
 </table>
